--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-publish:
-    name: Build, Publish
+    name: Build, Push, Release
     runs-on: ubuntu-latest
 
     steps:
@@ -18,8 +18,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # tag image with the GitHub SHA to get a unique tag
       - name: Build and publish backend
         run: |-
-          docker build --tag "mluukkai/dwk1" .
-          docker push "mluukkai/dwk1"
-  
+          docker build --tag "kirillstrelkov/dwk1:$GITHUB_SHA" .
+          docker push "kirillstrelkov/dwk1:$GITHUB_SHA"
+
+      - name: Set up Kustomize
+        uses: imranismail/setup-kustomize@v2
+
+      - name: Use right image
+        run: kustomize edit set image PROJECT/IMAGE=kirillstrelkov/dwk1:$GITHUB_SHA
+
+      - name: commit kustomization.yaml to GitHub
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: 'kustomization.yaml'
+          message: New version released ${{ github.sha }}
